--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,10 @@ fastlane/test_output
 
 # End of https://www.gitignore.io/api/swift,xcode
 
-# Custom 
 
+# old skool
+.svn
+
+# osx noise
 .DS_Store
+profile
